--- a/products.html
+++ b/products.html
@@ -44,13 +44,13 @@
     <tr>
       <td>
 
-        <img src="https://lh5.googleusercontent.com/oCMIu6IWSCLFSxKMwMzOCr0D0qPZ-vtdi-9IAy_CmlL9ePE-5hAHmzhS-tadcU4jUxQNbyWNTKbKqAcNoJQDCI7jxIPPkw3N69y65XVMNKhCapvJbm2frSNcx5XxPYn3BA=w1280" alt="r1" height="300">
+        <img src="HMT-Steam.jpg" alt="r1" height="300">
       </td>
       <td>
         <h3>HMT Steam rice</h3>
       </td>
       <td>
-        <img src="https://lh4.googleusercontent.com/vREP86fxSFAxo65-CbO2Fqkb-Lw8nnkAkv5hKFfwLY1kzVKbpiMVpYrcsT3jcCiSWmMLbEM6G94SuzHxRrx2RE133_bNKxtvdBgAXsSaEKi_AZFHrPoandYa3lQdBbeVgA=w1280" alt="boiled" height="300">
+        <img src="Sona Masoori BPT-Steam.jpg" alt="boiled" height="300">
       </td>
       <td>
         <h3>Boiled Rice</h3>
