--- a/products.html
+++ b/products.html
@@ -59,13 +59,13 @@
     <br>
     <tr>
       <td>
-        <img src="https://lh3.googleusercontent.com/jpGLes4oVPp01SM_7hnl77eewnmiUUqDdpy3Z-X8qDMKY3zDbSZOskp3-vyvjlqVqR0JG8WZzx_XVdiSUNNL0z7W8dsAiFk13RxQ4YDqK-IY-rorGxi0tHgzDcPJX70Q=w1280" alt="r2" height="300">
+        <img src="Jaya-Boiled.jpg" alt="r2" height="300">
       </td>
       <td>
         <h3>BPT Steam rice</h3>
       </td>
       <td>
-        <img src="https://lh5.googleusercontent.com/xL6TEgZFzvouNRotiWzssk30SONj_hlfbtXvIg7VFr4WX3VxgfMzoyDOqX7jdXfY21MUhSEQFR_UmBS9VyUWx8qFYYqRfZLiYgOxBUrlEkCuldUtttd9uU6GwWhdmg5sHA=w1280" alt="r4" height="300">
+        <img src="RNR-Steam.jpg" alt="r4" height="300">
       </td>
       <td>
         <h3>RNR Steam rice</h3>
