--- a/products.html
+++ b/products.html
@@ -62,7 +62,7 @@
         <img src="Jaya-Boiled.jpg" alt="r2" height="300">
       </td>
       <td>
-        <h3>BPT Steam rice</h3>
+        <h3>BPT Steam rice</h3> //uploaded
       </td>
       <td>
         <img src="RNR - Steam.jpg" alt="r4" height="300">
