--- a/products.html
+++ b/products.html
@@ -19,14 +19,14 @@
 </head>
 
 <body>
-  <h1>Prices Today: </h1>
+  <h1>Prices Today: Updated on(29th April 2022)</h1>
   <table>
     <h3>
       <thead>
         <tr>
-          <td>RAW (SARONA)</td>
-          <td>PER BOILED((ir64)</td>
-          <td>BOILED (mota)</td>
+          <td>RAW RICE (SARONA)</td>
+          <td>PARBOILED((ir64)</td>
+          <td>PARBOILED (mota)</td>
         </tr>
       </thead>
     </h3>
