--- a/products.html
+++ b/products.html
@@ -39,6 +39,9 @@
       </tr>
     </tbody>
   </table>
+  <br>
+  <h3Availabilty of the products given above: </h3>
+  
   <h1>Our Products</h1>
   <table>
     <tr>
